unpackaged/main/default/objects/Contact/fields/V_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>V_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R165569 - used in process builder to populate VAS Sales Rep field on account by marketo for MyCase Process</description>
    <label>VAS Sales Rep Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>