unpackaged/main/default/objects/Contact/fields/VAS_Sales_Rep_Active__c.field-meta.xml
<CustomField>
    <fullName>VAS_Sales_Rep_Active__c</fullName>
    <description>R152999</description>
    <formula>Account.VAS_Sales_Rep__r.IsActive  = True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAS Sales Rep Active</label>
    <type>Checkbox</type>
</CustomField>