unpackaged/main/default/objects/Contact/fields/Woodpecker_Account_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_Account_Signup_Date__c</fullName>
    <label>Woodpecker Account Signup Date</label>
    <type>Date</type>
</CustomField>