unpackaged/main/default/objects/Contact/fields/Woodpecker_id__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_id__c</fullName>
    <externalId>true</externalId>
    <label>Woodpecker ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>