unpackaged/main/default/objects/Contact/fields/X6sense_Country_Abbreviated__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Country_Abbreviated__c</fullName>
    <description>Enriched by 6sense</description>
    <label>6sense Country Abbreviated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>