unpackaged/main/default/objects/Contact/fields/X6sense_Employee_Range2__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Employee_Range2__c</fullName>
    <label>6sense Employee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>