unpackaged/main/default/objects/Contact/fields/X6sense_Industry__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Industry__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X6sense_Industry</valueSetName>
    </valueSet>
</CustomField>