unpackaged/main/default/objects/Contact/fields/X6sense_Phone_Company__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Phone_Company__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Phone (Company)</label>
    <type>Phone</type>
</CustomField>