unpackaged/main/default/objects/Contact/fields/X6sense_Revenue_Est__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Revenue_Est__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Revenue (Est.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>