unpackaged/main/default/objects/Contact/fields/X6sense_Segment__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Segment__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>