unpackaged/main/default/objects/Contact/fields/Zoho_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Zoho Systems Contact record ID</description>
    <externalId>true</externalId>
    <label>Zoho Contact ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>