unpackaged/main/default/objects/Contact/validationRules/Block_Updates_to_Lead_Source_and_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Updates_to_Lead_Source_and_Channel</fullName>
    <active>false</active>
    <description>Lead Source and Lead Channel should be set once, and then never changed. This is important because these data points are used in attribution reporting. They should never be overwritten.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;

(
ISCHANGED(LeadSource) ||
ISCHANGED(Lead_Channel__c)
)</errorConditionFormula>
    <errorMessage>Lead Source and Lead Channel cannot be changed.</errorMessage>
</ValidationRule>