unpackaged/main/default/objects/Contact/validationRules/Require_Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_Info</fullName>
    <active>true</active>
    <description>Contacts require basic contact information. A minimum of Email, Phone, and/or Mobile is required in order for a record to be saved.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;

(
    (
        ISNEW() &amp;&amp;
        Converted_from_Lead__c = FALSE
    ) ||
    ISCHANGED(Email) ||
    ISCHANGED(Phone) ||
    ISCHANGED(MobilePhone)
) &amp;&amp;

ISBLANK(Email) &amp;&amp;
ISBLANK(Phone) &amp;&amp;
ISBLANK(MobilePhone)</errorConditionFormula>
    <errorMessage>Contact information (Email, Phone, and/or Mobile) is required.</errorMessage>
</ValidationRule>