unpackaged/main/default/objects/Contact/validationRules/Require_Disqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Disqualified_Reason</fullName>
    <active>true</active>
    <description>Disqualified Contacts are not in our ideal customer profile (ICP) and will never be a fit. By tracking the reason, we can monitor the quality of our funnel.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;

(
   ISNEW() || 
   ISCHANGED(Status__c) ||
   ISCHANGED(Disqualified_Reason__c)
) &amp;&amp;

TEXT(Status__c) = &quot;Disqualified&quot; &amp;&amp;
ISBLANK(TEXT(Disqualified_Reason__c))</errorConditionFormula>
    <errorMessage>Disqualified Reason is required when Status is &quot;Disqualified.&quot;</errorMessage>
</ValidationRule>