unpackaged/main/default/objects/Contact/validationRules/Require_Lead_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Lead_Channel</fullName>
    <active>false</active>
    <description>Lead Source and Lead Channel are important attributes used for revenue and funnel reporting. They are required fields, except for historic data where we do not expect them to be populated.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;

ISNEW() &amp;&amp;
ISBLANK( TEXT( Lead_Channel__c )) &amp;&amp;
Converted_from_Lead__c = FALSE

/* We do not need to include any ISCHANGED logic 
since we never expect Lead Channel to change.
There is a separate VR that blocks updates to that field. */</errorConditionFormula>
    <errorMessage>Lead Channel is required.</errorMessage>
</ValidationRule>