unpackaged/main/default/objects/Contact/validationRules/Require_Marketing_Nurture_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Marketing_Nurture_Reason</fullName>
    <active>true</active>
    <description>This person is in our ideal customer profile (ICP) and could be ready to buy sometime, but not now. By tracking the reason, we are better equipped to nurture and get them ready to buy in the future.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;

(
   ISNEW() ||
   ISCHANGED( Status__c ) ||
   ISCHANGED( Nurture_Marketing_Reasons__c )
) &amp;&amp;

TEXT( Status__c ) = &quot;Marketing Nurture&quot; &amp;&amp;
ISBLANK( TEXT( Nurture_Marketing_Reasons__c ))</errorConditionFormula>
    <errorMessage>Marketing Nurture Reason is required when Status is &quot;Marketing Nurture.&quot;</errorMessage>
</ValidationRule>