unpackaged/main/default/objects/Contact/validationRules/Require_Outbound_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Outbound_Reason</fullName>
    <active>true</active>
    <description>Require Outbound Reason when Sales Lead Type = Outbound</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;
OR(
    ISNEW(),
    ISCHANGED(Sales_Lead_Type__c),
    ISCHANGED(Outbound_Reason__c)
) &amp;&amp;

ISPICKVAL(Sales_Lead_Type__c, &quot;Outbound&quot;) &amp;&amp;
ISBLANK(TEXT(Outbound_Reason__c))</errorConditionFormula>
    <errorMessage>You must select an Outbound Reason if the Sales Lead Type is the value Outbound.</errorMessage>
</ValidationRule>