unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Contacts</label>
</ListView>