unpackaged/main/default/objects/Contact/listViews/api_2023_06_lawpaypro_outbound.listView-meta.xml
<ListView>
    <fullName>api_2023_06_lawpaypro_outbound</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Contract_Effective_Start__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Number_of_Employees__c</columns>
    <columns>Primary_Practice_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>2023-06: LawPay Pro BDR Outbound</label>
    <sharedTo>
        <group>Payments_BDR</group>
        <roleAndSubordinates>Sales_Manager_Payments_BDR</roleAndSubordinates>
    </sharedTo>
</ListView>