unpackaged/main/default/objects/Contact/listViews/Copy_of_2023_07_Kaelan_s_Liz_s_C.listView-meta.xml
<ListView>
    <fullName>Copy_of_2023_07_Kaelan_s_Liz_s_C</fullName>
    <columns>mkto_si__Current_Sales_Campaign__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Account.Contract_Effective_Start__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Number_of_Employees__c</columns>
    <columns>Primary_Practice_Area__c</columns>
    <columns>Last_MQL_Brand__c</columns>
    <columns>Last_MQL_Date__c</columns>
    <columns>Last_MQL_Type__c</columns>
    <columns>Outreach_Actively_Being_Sequenced__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>mkto_si__Current_Sales_Campaign__c</field>
        <operation>contains</operation>
        <value>2023-07-26 - Reassignment of Kaelans contacts/leads/opps,2023-07-26 - Reassignment of Liz&#39;s contacts/leads/opps</value>
    </filters>
    <label>Copy of 2023-07 - Kaelan&#39;s/Liz&#39;s C</label>
    <sharedTo>
        <role>Sales_Manager_MyCase_Core_A</role>
    </sharedTo>
</ListView>