unpackaged/main/default/objects/Contact/listViews/DRAFT_CASEpeer_MQLs.listView-meta.xml
<ListView>
    <fullName>DRAFT_CASEpeer_MQLs</fullName>
    <booleanFilter>1 AND (2 or 3 or 5) AND 4 and 6</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Timezone__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_MQL_Date__c</columns>
    <columns>Last_MQL_Brand__c</columns>
    <columns>Last_MQL_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_MQL_Brand__c</field>
        <operation>equals</operation>
        <value>CASEpeer</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mql</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>CASEpeer MQLs</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Marketing Nurture,Disqualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>CASEpeer Sales Requests</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working,Engaged</value>
    </filters>
    <label>CASEpeer MQLs</label>
    <sharedTo>
        <roleAndSubordinates>Sales_Manager_CASEpeer_MyCase_Core_C</roleAndSubordinates>
    </sharedTo>
</ListView>