unpackaged/main/default/objects/Contact/listViews/DRAFT_Cross_Sell_LP_to_Existing_MC_DW.listView-meta.xml
<ListView>
    <fullName>DRAFT_Cross_Sell_LP_to_Existing_MC_DW</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Contract_Effective_Start__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Number_of_Employees__c</columns>
    <columns>Primary_Practice_Area__c</columns>
    <filterScope>Mine</filterScope>
    <label>2023-05: Cross-Sell LP to Existing MC/DW</label>
    <sharedTo>
        <group>Payments_BDR</group>
        <roleAndSubordinates>BDR_Payments</roleAndSubordinates>
        <roleAndSubordinates>Sales_Manager_Payments_BDR</roleAndSubordinates>
    </sharedTo>
</ListView>