unpackaged/main/default/objects/Contact/listViews/DRAFT_Soluno_MQLs.listView-meta.xml
<ListView>
    <fullName>DRAFT_Soluno_MQLs</fullName>
    <booleanFilter>1 AND (2 or 3) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Timezone__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_MQL_Date__c</columns>
    <columns>Last_MQL_Brand__c</columns>
    <columns>Last_MQL_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_MQL_Brand__c</field>
        <operation>equals</operation>
        <value>Soluno</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mqls</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Soluno MQLs</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Marketing Nurture,Disqualified</value>
    </filters>
    <label>Soluno MQLs - Queue</label>
    <sharedTo>
        <roleAndSubordinates>Sales_Manager_Soluno</roleAndSubordinates>
    </sharedTo>
</ListView>