unpackaged/main/default/objects/Contact/listViews/LP_View.listView-meta.xml
<ListView>
    <fullName>LP_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>LP View</label>
</ListView>