unpackaged/main/default/objects/Contact/listViews/My_Contacts_Assigned.listView-meta.xml
<ListView>
    <fullName>My_Contacts_Assigned</fullName>
    <columns>FULL_NAME</columns>
    <columns>Status__c</columns>
    <columns>mkto_si__Current_Sales_Campaign__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Timezone__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_MQL_Date__c</columns>
    <columns>Last_MQL_Brand__c</columns>
    <columns>Last_MQL_Type__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </filters>
    <label>My Contacts - Assigned</label>
</ListView>