unpackaged/main/default/objects/Contact/listViews/My_Contacts_New_Working_Engaged.listView-meta.xml
<ListView>
    <fullName>My_Contacts_New_Working_Engaged</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Last_MQL_Type__c</columns>
    <columns>Last_MQL_Brand__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working,Engaged</value>
    </filters>
    <label>My Contacts - New, Working &amp; Engaged</label>
</ListView>