unpackaged/main/default/objects/Contact/listViews/My_Contacts_Work_Engaged_No_Act_5D.listView-meta.xml
<ListView>
    <fullName>My_Contacts_Work_Engaged_No_Act_5D</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Timezone__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Last_MQL_Brand__c</columns>
    <columns>Last_MQL_Date__c</columns>
    <columns>Last_MQL_Type__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Sales_Lead_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Working,Engaged</value>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <label>My Contacts - Work &amp; Engaged (No Act 5D)</label>
</ListView>